--- a/css_mobile.css
+++ b/css_mobile.css
@@ -35,20 +35,16 @@ h2{
 }
 #logo{
     order: 1;
-    width: 80%;
+    width: 60%;
 }
 nav{
-    order: 3;
-    width: 100%;
+    order: 2;
+   width: 30%;
 }
 #inscription{
-    order: 1;
-    width: 20%;
+    order: 3;
+    width: 10%;
 }
-
-/*nav{
-    align-self: flex-end;
-}*/
 
 nav ul{
     display: flex;
@@ -58,21 +54,25 @@ nav ul{
 }
 
 nav li{
-    width: 45%;
+    width: 50%;
     text-align: center;
 }
 
 nav a{
     display: block; /* Permet à la balise inline a de se comporter comme un block et notamment d'avoir des bordures */
     padding-bottom: 1rem;
+    border-top: 0.2rem solid #FFFFFF;
     border-bottom: 0.2rem solid #FFFFFF;
 }
 
 nav a:hover{
     color: #0065FC;
-    border-bottom: 0.2rem solid #0065FC;
+    border-top: 0.2rem solid #0065FC;
 }
 
+#inscription{
+    padding-top: 0.5em;
+}
 #inscription a{
     color: #0065FC;
     font-weight: bold;
@@ -82,6 +82,27 @@ header h2{
     width: 90%;
 }
 
+/* revoir la condition */
+@media screen and (max-width: 500px) {
+    nav a:hover{
+        color: #0065FC;
+        border-bottom: 0.2rem solid #0065FC;
+        border-top: 0.2rem solid #FFFFFF;
+    }
+
+    #logo{
+        order: 1;
+        width: 80%;
+    }
+    nav{
+        order: 3;
+        width: 100%;
+    }
+    #inscription{
+        order: 2;
+        width: 20%;
+    }
+}
 
 /* Recherche */
 
@@ -167,32 +188,45 @@ form{
 
 /* Hébergement */
 
-.hebergements h2{
+#hebergements h2{
     width: 100%;
 }
 
-.ensemble_cartes{
+.ensemble-cartes{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-
 }
 
 .carte{
-    border-radius: 10%;
+    border-radius: 0.7rem;
     box-shadow: 0.5rem 0.5rem 1rem 0.5rem #F2F2F2;
     width: 30%;
-    padding: 0.3rem;
+    padding: 0.2rem;
 }
 
-.carte a img{
+.carte__img{
     width: 100%;
-    border-radius: 10%;
+    height: 30%;
+    overflow: hidden;
+    border-radius: 0.7rem 0.7rem 0 0;
 }
 
-.carte a h2{
-    font-size: 1rem;
+#image {
+    max-width: 100%;
+    max-height: auto;
+    object-position: 0 -0.8rem;
+}
+
+
+.carte__infos h3{
+    font-size: 0.8rem;
+}   
+
+.carte__infos{
+    font-size: 0.7em;
+    margin: 0 auto 0 0.3rem;
 }
 
 /*
@@ -201,9 +235,45 @@ form{
 .carte-activite
 */
 
+/* Activités */
+
+#activites h2, #activites div{
+    border: 1px solid black;
+}
+
+#activites{
+    display: grid;
+    grid-template: 2em 10em 10em 10em / 1fr 1fr 1fr 1fr;
+    grid-gap: 1.5em
+}
+
+#activites h2{
+    grid-column: 1 / -1;
+}
+
+#one{
+    grid-row: 2 / 4;
+
+}
+
+#two{
+    grid-row: 2 / 2;
+}
+
+#three{
+    grid-row: 3 / 4;
+}
+
+#four{
+    grid-row: 2 / 4;
+}
+
+
+
 /*footer*/
 footer{
-    padding: 2rem 1.5rem 2.5rem 1.5rem
+    padding: 1.5rem 1.5rem 0 1.5rem;
+    display: flex;
 }
 
 footer h3{
@@ -212,9 +282,14 @@ footer h3{
     margin-bottom: 1.5rem;
 }
 
+footer div{
+    min-width: 33%;
+}
+
 footer ul{
     list-style-type: none;
-    padding-left: 0%;
+    padding-left: 0;
+    margin-bottom: 0;
 }
 
 footer li{
@@ -224,4 +299,11 @@ footer li{
 
 footer div{
     margin-bottom: 30px;
+}
+
+@media screen and (max-width: 500px) {
+    footer{
+        display: flex;
+        flex-direction: column;
+    }
 }
