--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
     font-family: 'Raleway', sans-serif;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     width: 100%;
     border: 1px solid black;
     margin: auto;
+    background-color: #FFFFFF;
 }
 
 a{
@@ -31,7 +32,7 @@ aside, footer{
 
 h1, h2{
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 #logo img{
@@ -271,14 +272,15 @@ form{
 }
 
 @media screen and (max-width: 600px) {
-   /* .filtres{
+   .filtres{
         flex-direction: column ;
         justify-content: flex-start;
         align-items: baseline;
-    }*/
+    }
 
     .filtres h4{
         margin-bottom: 0;
+        font-size: 0.8rem;
     }
 }
 
@@ -514,7 +516,7 @@ data{
     }
     .hebergement__conteneur{
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: wrap column;
     }
 }
 
@@ -543,18 +545,43 @@ data{
     border: 1px solid black;
 }*/
 
+#activites{
+    padding: 0.5rem;
+}
+
 #activites .carte{
     padding: 0;
-    height: 13rem;
+   /* height: 13rem; */
+    display: block;
 }
 
 #activites .image{
-    height: 9rem;
+    height: 6rem;
     object-fit: cover;
-    /*object-position: ;*/
+    object-position: center;
+}
+
+#activites .carte h3{
+    font-size: 0.7rem;
+    margin: 0;
+    padding: 0.5rem;
+}
+
+@media (min-width: 601px) and (max-width: 950px){
+    .activites__conteneur{
+        display: flex;
+        flex-flow: wrap row;
+        justify-content: space-around;
+    }
+    .cadre{
+        width: 30%;
+    }
 }
 
 
+
+
+/*
 @media screen and (min-width: 600px) {
     #activites{
         display: grid;
@@ -582,7 +609,7 @@ data{
     #four{
         grid-row: 2 / 4;
     }
-}
+}*/
 
 
 
